--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/upload-documents/upload-documents.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/upload-documents/upload-documents.component.html
@@ -7,20 +7,25 @@
           <ng-container *ngFor="let document of claimDocuments; let i = index">
             <!-- Column with specified width -->
             <div class="col-md-4 col-sm-12 mb-4">
-              <div class="d-flex align-items-center flex-wrap">
+              <div class="d-flex align-items-center flex-wrap custom-items-center ">
                 <label class="fixed-width-label ">{{ document?.desc }}<span *ngIf="document.submitted === 'Y'" style="color: red;">*</span></label>
+
                 <div class="form-group">
                   <p-fileUpload
                     mode="basic"
-                    name="demo[]"
+                    [name]="document['desc']"
+                    accept=".pdf"
                     chooseIcon="pi pi-upload"
-                    accept="image/*"
-                    [maxFileSize]="1000000"
                     (onUpload)="onBasicUploadAuto($event)"
                     (onSelect)="uploadFile($event, document['desc'] )"
                     [auto]="true"
                     chooseLabel="Choose File"
-                  />
+                    [showUploadButton]=true
+                    [showCancelButton]=true
+                    [mode]="'basic'"
+                    (onError)="onError()"
+                    (onProgress)=" onProgress($event)"
+                  ></p-fileUpload>
                 </div>
               </div>
             </div>
