consumed campaign activities endpoints

--- a/src/app/features/crm/components/campaigns/campaigns.component.html
+++ b/src/app/features/crm/components/campaigns/campaigns.component.html
@@ -176,8 +176,7 @@
       </ng-container>
       <ng-template #otherTemplates>
         <ng-container *ngIf="showDefinitionMode; else showCampaignAnalytics">
-          <app-campaign-definition (onClickSave)="toggleCampaign()"
-          [systems]="systemsData" [organizations]="organizationData" [currencies]="currencyData" [selectedCampaign]="selectedCampaign"
+          <app-campaign-definition (onClickSave)="toggleCampaign()" [selectedCampaign]="selectedCampaign"
           ></app-campaign-definition>
         </ng-container>
 
